[package]
name = "aks"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
description = "A fast implementation of the AKS primality test."
repository = "https://github.com/bemeurer/aks"
readme = "./README.md"
keywords = ["AKS", "primality", "test", "primes", "fast"]
categories = ["algorithms", "science"]
license = "BSD-3-Clause"
license-file = "./LICENSE.md"
maintenance = { status = "actively-developed" }


[dependencies]
